--- a/hs_core/templates/pages/find-communities.html
+++ b/hs_core/templates/pages/find-communities.html
@@ -53,7 +53,7 @@
                                          style="background-image: url({{ STATIC_URL }}img/home-page/step4.png)"></div>
                                 {% endif %}
                                 <div class="group-caption">
-                                    <h3 class="group-name" style="overflow-y: auto"><a
+                                    <h3 class="group-name"><a
                                             href="/group/{{ group.id }}">{{ group.name }}</a></h3>
                                     <div class="group-purpose" style="overflow-y: auto">
                                         <p>{{ group.gaccess.purpose|linebreaks }}</p>
