Move topics code

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -824,6 +824,7 @@
 
 {% block extra_js %}
     {{ block.super }}
+    <!--suppress JSAnnotator -->
     <script>
       {# GLOBAL DECLARATIONS FOR RESOURCE LANDING PAGE SCRIPTS #}
       const RES_KEYWORDS = {{ keywords|safe }};
