--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -64,8 +64,8 @@
 
 {% block extra_js %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/vue-mover.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css"/>
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>
     <style>
         [v-cloak] {
             display: none
