--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -234,18 +234,7 @@
 
                     <div slot="header">Title Assistant</div>
                     <p slot="body">
-                        <select id="czselect" v-model="selected" @change="updateInput()">
-                            <option disabled value="">Critical Zone Region</option>
-                            <option>BCCZO</option>
-                            <option>CCZO</option>
-                            <option>CJCZO</option>
-                            <option>CRBCZO</option>
-                            <option>ERCZO</option>
-                            <option>LCZO</option>
-                            <option>RCCZO</option>
-                            <option>SSCZO</option>
-                            <option>SSHCZO</option>
-                        </select><br/>
+                        MODAL CONTENT<br/>
 
                     </p>
                 </modal>
@@ -296,6 +285,31 @@
         <div class="clear-fix"><img class="app-approved-icon-img" src="/static/img/approved_app.png"><i>This WebApp
             resource has been approved by HydroShare admin.</i></div>
     </div>
+{% endif %}
+
+{% if communities_enabled %}
+    {% block extra_js %}
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/vue-mover.css">
+    {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">#}
+    {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>#}
+    {#    <style>#}
+    {#        [v-cloak] {#}
+    {#            display: none#}
+    {#        }#}
+    {#    </style>#}
+    {##}
+    {#    <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>#}
+        <script type="application/javascript">
+            // contents here are required by topics.js
+            const topics_from_page = JSON.parse("{{ topics_json }}");
+        </script>
+    {#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script> this is for the edit part TODO move this#}
+    {#    <script src="{{ STATIC_URL }}js/jquery-1.11.2-min.js"></script>#}
+    {#    <script src="{{ STATIC_URL }}js/Sortable.min.js"></script>#}
+    {#    <script src="{{ STATIC_URL }}js/vue-mover.js"></script>#}
+    {#    <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>#}
+
+    {% endblock %}
 {% endif %}
 
 {# ======= JSON-LD Structure ======= #}
