--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -236,7 +236,32 @@
 
                         <div slot="header">Title Assistant</div>
                         <p slot="body">
-                        <div id="title-assistant"></div>
+                            asdf
+                            <input id="resource-title" v-model="title" size="400" disabled/><br/><br/>
+                            Region:
+                            <select id="czselect" v-model="regionSelected" @change="updateTitle()">
+                                <option disabled value="">Critical Zone Region</option>
+                                <option>BCCZO</option>
+                                <option>CCZO</option>
+                                <option>CJCZO</option>
+                                <option>CRBCZO</option>
+                                <option>ERCZO</option>
+                                <option>LCZO</option>
+                                <option>RCCZO</option>
+                                <option>SSCZO</option>
+                                <option>SSHCZO</option>
+                                <option>X-CZO</option>
+                            </select><br/>
+
+                        <div class="container" style="margin-top: 80px">
+                            <mover :all-items="topics.itemsList" :right-items="topics.selectedItems"
+                                   title-left="Available Topics" title-right="Selected Items"
+                                   moved-item-location="bottom"
+                                   v-on:item-moved="itemMoved" v-cloak>
+                            </mover>
+                        </div>
+                        Subtopic:<br/>
+                        <input id="resource-subtopic" v-model="subtopic" v-on:keyup="updateTitle()"/>
 
 
                         </p>
