--- a/hs_communities/templates/hs_communities/title-assistant.html
+++ b/hs_communities/templates/hs_communities/title-assistant.html
@@ -10,40 +10,25 @@
 {#<!-- Link to open the modal -->#}
 {#<p><a href="#ex1" rel="modal:open">Open Modal</a></p>#}
 
-<div id="title-builder-app">
-    <!-- template for the modal component -->
-    <script type="text/x-template" id="modal-template">
-        <transition name="modal">
-            <div class="modal-mask">
-                <div class="modal-wrapper">
-                    <div class="modal-container">
+<div class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
-                        <div class="modal-header">
-                            <slot name="header">
-                                default header
-                            </slot>
-                        </div>
-
-                        <div class="modal-body">
-                            <slot name="body">
-                                default body
-                            </slot>
-                        </div>
-
-                        <div class="modal-footer">
-                            <slot name="footer">
-                                <button class="modal-default-button" @click="$emit('close')">
-                                    OK
-                                </button>
-                            </slot>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </transition>
-    </script>
-
-    <!-- app -->asdf
+    <!-- app -->
     https://stackoverflow.com/questions/32958219/getting-bootstraps-modal-content-from-another-page
     <div id="modal-app">
         {#  <button id="show-modal" @click="showModal = true">Show Modal</button>#}
