--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -194,88 +194,60 @@
         {% endif %}
     {% else %}
         </div>
-        <div id="title-builder-app">
-            <!-- template for the modal component -->
-            <script type="text/x-template" id="modal-template">
-                <transition name="modal">
-                    <div class="modal-mask">
-                        <div class="modal-wrapper">
-                            <div class="modal-container">
+        {% if communities_enabled %}
 
-                                <div class="modal-header">
-                                    <slot name="header">
-                                        default header
-                                    </slot>
-                                </div>
-
-                                <div class="modal-body">
-                                    <slot name="body">
-                                        default body
-                                    </slot>
-                                </div>
-
-                                <div class="modal-footer">
-                                    <slot name="footer">
-                                        <button class="modal-default-button" @click="$emit('close')">
-                                            OK
-                                        </button>
-                                    </slot>
-                                </div>
+            <div class="modal fade" id="title-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div id="title-assistant">
+                                <textarea id="resource-title" v-model="title" disabled rows="3"
+                                          cols="75"></textarea><br/><br/>
+                                Region:
+                                <select id="czselect" v-model="regionSelected" @change="updateTitle()">
+                                    <option disabled value="">Critical Zone Region</option>
+                                    <option>BCCZO</option>
+                                    <option>CCZO</option>
+                                    <option>CJCZO</option>
+                                    <option>CRBCZO</option>
+                                    <option>ERCZO</option>
+                                    <option>LCZO</option>
+                                    <option>RCCZO</option>
+                                    <option>SSCZO</option>
+                                    <option>SSHCZO</option>
+                                    <option>X-CZO</option>
+                                </select><br/>
+                                <mover :all-items="topics.itemsList" :right-items="topics.selectedItems"
+                                       title-left="Available Topics" title-right="Selected Items"
+                                       moved-item-location="bottom"
+                                       v-on:item-moved="itemMoved" v-cloak>
+                                </mover>
+                                Subtopic:<br/>
+                                <input id="resource-subtopic" v-model="subtopic" v-on:keyup="updateTitle()"/>
                             </div>
                         </div>
-                    </div>
-                </transition>
-            </script>
-            <!-- app -->
-
-            {% if communities_enabled %}
-                <div id="modal-app">
-                    {#  <button id="show-modal" @click="showModal = true">Show Modal</button>#}
-                    <!-- use the modal component, pass in the prop -->
-                    <modal v-if="showModal" @close="showModal = false">
-
-                        <div slot="header">Title Assistant</div>
-                        <p slot="body">
-                            asdf
-                            <input id="resource-title" v-model="title" size="400" disabled/><br/><br/>
-                            Region:
-                            <select id="czselect" v-model="regionSelected" @change="updateTitle()">
-                                <option disabled value="">Critical Zone Region</option>
-                                <option>BCCZO</option>
-                                <option>CCZO</option>
-                                <option>CJCZO</option>
-                                <option>CRBCZO</option>
-                                <option>ERCZO</option>
-                                <option>LCZO</option>
-                                <option>RCCZO</option>
-                                <option>SSCZO</option>
-                                <option>SSHCZO</option>
-                                <option>X-CZO</option>
-                            </select><br/>
-
-                        <div class="container" style="margin-top: 80px">
-                            <mover :all-items="topics.itemsList" :right-items="topics.selectedItems"
-                                   title-left="Available Topics" title-right="Selected Items"
-                                   moved-item-location="bottom"
-                                   v-on:item-moved="itemMoved" v-cloak>
-                            </mover>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
                         </div>
-                        Subtopic:<br/>
-                        <input id="resource-subtopic" v-model="subtopic" v-on:keyup="updateTitle()"/>
+                    </div>
+                </div>
+</div>
 
 
-                        </p>
-                    </modal>
-                </div>
-                </div>
-                <script type="application/javascript">
-                    // contents here are required by topics.js
-                    const topics_from_page = JSON.parse("{{ topics_json }}");
-                    {#console.log(topics_from_page)#}
-                </script>
-{#                <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>#}
-                <script type="text/javascript" src="{{ STATIC_URL }}js/modal.js"></script>
-            {% endif %}
+
+
+            <script type="application/javascript">
+                // contents here are required by topics.js
+                const topics_from_page = JSON.parse("{{ topics_json }}");
+            </script>
+            <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>
+        {% endif %}
         <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
               id="id-title"
               method="post">
@@ -323,21 +295,18 @@
 {% if communities_enabled %}
     {% block extra_js %}
         <link rel="stylesheet" href="{{ STATIC_URL }}css/vue-mover.css">
-        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">#}
-        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>#}
+
         <style>
             [v-cloak] {
                 display: none
             }
         </style>
-        {##}
-        {#    <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>#}
 
         {#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script> this is for the edit part TODO move this#}
-        {#    <script src="{{ STATIC_URL }}js/jquery-1.11.2-min.js"></script>#}
         <script src="{{ STATIC_URL }}js/Sortable.min.js"></script>
         <script src="{{ STATIC_URL }}js/vue-mover.js"></script>
-
+        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">#}
+        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>#}
 
     {% endblock %}
 {% endif %}
