--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -9,17 +9,21 @@
     <body>
     <div id="topics-app">
         <h2>Edit Topics</h2>
+        <input type="text" v-model="newTopic"/>
+        <button v-on:click="addTopic('{{ csrf_token }}', )">Add Topic</button>
         <template>
             <ul>
                 <li v-for="number in numbers">
                     <span v-show="!number.edit" v-on:click="toggleEdit(this, number)">{% templatetag openvariable %} number.val[1] {% templatetag closevariable %}</span>
                     <input type="text" v-model="number.val[1]" v-show="number.edit"
-                           v-on:blur="saveEdit('{{ csrf_token }}', this, number)">
+                           v-on:blur="saveEdit('{{ csrf_token }}', this, number)"/>
+                    <span v-on:click="deleteTopic('{{ csrf_token }}', number.val[0])">X</span>
                 </li>
             </ul>
         </template>
+
     </div>
-    <button>add</button>
+
 
     </body>
     </html>
