Add community listing page

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -12,7 +12,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="collaborate-nav">
-                            <a href="{% url 'communities' %}" class="collaborate-nav-item active">Community</a>
+                            <a href="{% url "communities" %}" class="collaborate-nav-item">Find Communities</a>
+                            <a href="{% url "my_communities" %}" class="collaborate-nav-item">My Communities</a>
                         </div>
                     </div>
                 </div>
