Title builder updates title

--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -3,7 +3,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title Assistant</title>
+        <title>Topics Editor</title>
         <link rel="shortcut icon" href="/">
     </head>
     <body>
