--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -258,7 +258,7 @@
                                                  value="{{ cm.metadata.title }}"></div>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-primary pull-right btn-form-submit" style="display: none;">
+                    <button type="button" id="title-save-button" class="btn btn-primary pull-right btn-form-submit" style="display: none;">
                         Save changes
                     </button>
                 </div>
