Reorganize files update text for title builder

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -68,7 +68,7 @@
                                                             {% if grpfilter == g.name %}
                                                                  checked
                                                             {% endif %}
-                                                                />
+                                                            />&nbsp;&nbsp;<span class="badge">{{ g.res_count }}</span>
                                                             </label>
                                                         </li>
                                                     {% endfor %}
