--- a/hs_communities/templates/hs_communities/find-communities.html
+++ b/hs_communities/templates/hs_communities/find-communities.html
@@ -143,7 +143,7 @@
 
                                             <div class="text-center">
                                                 <h4 class="flag-joined"><span class="glyphicon glyphicon-ok"></span> You
-                                                    may have joined this community</h4>
+                                                     have joined this community</h4>
                                             </div>
                                     </div>
                                 </div>
